<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hollerback</string>
    <string name="app_name_lc">hollerback</string>
    <string name="all">All</string>
    <string name="loading_message">Hollerback is loading, please wait.</string>
    <string name="action_settings">My Account</string>
    <string name="action_find_friends">Add Friends</string>
    <string name="action_remove_friend">Remove Friend</string>
    <string name="action_remove">Remove</string>
    <string name="action_invite_friends">Invite Friends</string>
    <string name="action_add">Add</string>
    <string name="action_info">Info</string>
    <string name="action_switch">Switch Camera</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_filter">Filter</string>
    <string name="action_play">Play</string>
    <string name="action_send">Send</string>
    <string name="action_send_lc">send</string>
    <string name="action_search">Search</string>
    <string name="action_person">Person</string>
    <string name="action_record">Record</string>
    <string name="action_next">Next</string>
    <string name="action_next_lc">next</string>
    <string name="action_verify">Verify</string>
    <string name="action_clear">Clear</string>
    <string name="action_invite">Invite</string>
    <string name="action_reply">Reply</string>
    <string name="action_uploading">Uploading</string>
    <string name="action_about">About</string>
    <string name="action_submit">Submit</string>
    <string name="ok">OK</string>

    <!-- Feedback -->
    <string name="feedback_email">feeback@hollerback.co</string>
    <string name="feedback_subject">Feedback</string>
    <string name="select_email">Send feedback to Hollerback</string>

    <!-- Welcome Text -->
    <string name="talk_to_friends">talk to your friends</string>
    <string name="anytime_anywhere">anytime, anywhere</string>

    <!-- Button Strings -->
    <string name="signin">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="tap_start">Tap screen to start recording</string>
    <string name="tap_stop">Tap screen to stop</string>
    <string name="timer_default">20s</string>

    <!-- Recording stuff -->
    <string name="record_filter">Pick a Filter</string>
    <string name="record_message">Record a Message</string>
    <string name="record_recording">Recording</string>
    <string name="record_review">Review</string>
    <string name="start_recording_dialog_title">Reply with Recording</string>
    <string name="start_recording_dialog_message">After watching your messages, we give you a chance to reply.\n\nDon\'t worry if you aren\'t ready, you can always hit the back button during the recording.</string>
    <string name="start_recording_dialog_button">Reply Now</string>

    <!-- Sign In/Sign Up -->
    <string name="name">Username</string>
    <string name="username_lc">username</string>
    <string name="email">Email</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="number">555&#8211;555&#8211;5555</string>
    <string name="header_country_code_phone">Country Code and Phone Number</string>
    <string name="header_account">Account</string>
    <string name="no_network_connection_toast">Not connected to Internet</string>
    <string name="new_conversation">New Conversation</string>
    <string name="error_name_null">Name is not valid</string>
    <string name="error_email">Email not valid</string>
    <string name="error_phone">Phone number is not valid</string>
    <string name="error_password">Please enter a password</string>
    <string name="error_login">Login Failed</string>
    <string name="error_oops">Oops</string>
    <string name="error_registration">There was a problem processing your registration info.</string>
    <string name="error_verification"></string>
    <string name="error_general">Oops, you may be disconnected from the internet.</string>
    <string name="toast_reverify_sent">We texted you a new pin</string>
    <string name="welcome_contacts_friends">If your friends don\'t have the app, they\'ll get your video in a text.</string>
    <string name="contacts_minimum_required">Don\'t start a conversation with yourself, add at least one contact.</string>
    <string name="message_sent">Nice! Message Sent!</string>
    <string name="message_sent_simple">Message Sent!</string>
    <string name="send_another">Send Another</string>
    <string name="conversation_list">Your Conversations</string>
    <string name="signup_agreement">By clicking Next you are indicating that you have read and agree to the <a href="http://www.hollerback.co/privacy">Privacy Policy</a> and <a href="http://www.hollerback.co/terms">Terms of Service</a></string>
    <string name="signup_phone_info">We use your phone number to find the Hollerback usernames of your friends.\n We will not spam or auto-add your friends.</string>
    <string name="signup_phone_hash_info">The phone numbers from your address book:\n- will only be used to find your friends\n-will be stored as non-unique encrypted representations (or "hashes") which will be used to match users but which contain no personal identifying information</string>
    <string name="empty_conversation_list">Start using Hollerback by sending a video message to your friends!</string>
    <string name="verify_text">If you don\'t receive it in 60 seconds,</string>
    <!-- <string name="click_to_resend">&lt;a href=""&gt;tap here to resend.&lt;/a&gt;</string> -->
    <string name="click_to_resend"><u>tap here to resend.</u></string>

    <!-- Preference Screen -->
    <string name="preference_category_friends">Friends</string>
    <string name="preference_category_account">Account</string>
    <string name="preference_category_library">Save to Library</string>
    <string name="preference_category_terms">Terms</string>
    <string name="preference_category_team">Hollerback Team</string>
    <string name="preference_friends">Add Friends</string>
    <string name="preference_logout">Log Out</string>
    <string name="preference_username">Username</string>
    <string name="preference_phone">Phone Number</string>
    <string name="preference_save">Save to SD Card</string>
    <string name="preference_terms">Terms of Services</string>
    <string name="preference_privacy">Privacy Policy</string>
    <string name="preference_feedback">Send us feedback</string>
    <string name="preference_twitter">Hollerback on Twitter</string>
    <string name="preference_facebook">Hollerback on Facebook</string>
    <string name="preference_new_group">New Group</string>
    <string name="tap_start">Tap screen to start recording</string>
    <string name="tap_stop">Tap screen to stop</string>
    <string name="timer_default">20s</string>
    <string name="verify_pin">Enter Pin # from SMS</string>
    <string name="verify_phone_display">We texted your pin to</string>
    <string name="contact_hollerback">Hollerback Friends</string>
    <string name="contact_phone">Phone Contact</string>
    <string name="contact_members_leave">Leave Group</string>
    <string name="conversation_members">Members</string>
    <string name="conversation_leave_success">Successfully left the conversation.</string>
    <string name="conversation_unwatched_videos">Unwatched Videos</string>
    <string name="invite_successful">Your friends has successfully been invited.</string>
    <string name="record_error">There was an error recording.</string>

    <!-- Contacts -->
    <string name="send_to_hb_friend">Send to Hollerback Friend</string>
    <string name="send_to_contact">Send to Friend from Contacts</string>
    <string name="sms_invite_friends">hey. download hollerback and send me a video message. www.hollerback.co/download</string>
    <string name="invite_friends_title">Invite Friends</string>

    <!-- Start Conversation -->
    <string name="tap_to_start">Tap the Camera to Holler</string>
    <string name="say_hello">Say \"Hello!\"</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="start_convo_sms_body">hey i just sent you a video message on the app hollerback. it\'s like video texting. here\'s your invite to download it: www.hollerback.co/invite</string>
    <string name="invite_activity_chooser">Invite</string>
    <string name="start_convo_intro_title">How this works</string>
    <string name="start_convo_intro_body">1. Send a video of yourself saying “Hello!”\n\n2. We\'ll ask you to send them a text (if they\'re not on the app) \n\n3. Once they watch it,\n you get their response!</string>

    <!-- Notifications -->
    <plurals name="notif_new_message">
        <item quantity="one">%1$s</item>
        <item quantity="two">You have new messages!</item>
        <item quantity="few">You have new messages!</item>
        <item quantity="many">You have new messages!</item>
    </plurals>

    <!-- Contacts Book -->
    <string name="contacts_lc">contacts</string>
    <string name="contacts_cc">Contacts</string>
    <string name="hollerback_users_lc">hollerback users</string>
    <string name="search_lc">search</string>
    <string name="contactbook_title">Add Friends</string>
    <string name="users_in_my_contacts">Users in My Contacts</string>
    <string name="invite_contacts">Invite Contacts</string>
    <string name="users_who_have_added_me">Users who have Added Me</string>
    <string name="send_to">Send to...</string>

    <!-- Friend List -->
    <string name="recents">Recents</string>
    <string name="no_recents">No recents yet</string>
    <string name="my_friends">My Friends</string>
    <string name="no_friends">Your Friends list is empty; try adding some friends.</string>
    <string name="no_friends_in_contacts">No Hollerback users in your contacts. Ask some friends to join.</string>
    <string name="nobody_has_added_you">Nobody has added you</string>
    <string name="from_contacts_title">From Contacts</string>
    <string name="remove_selected">%1$s selected</string>
    <string name="remove_friends">Remove Friends</string>

    <!-- Search User Fragment -->
    <string name="find_by_username">find by username</string>
    <string name="already_a_friend">%1$s is already a friend.</string>
    <string name="you_are_your_best_friend">hollerback! you are your best friend</string>
    <string name="field_empty">can\'t search for an empty username</string>

    <!-- Invite fragment -->
    <string name="contacts_book_empty">Your contacts book may be empty.</string>
    <string name="invite">Invite</string>
    <string name="invite_dialog_title">Invite Friends &amp; Family</string>
    <string name="invite_dialog_message">It\'s more fun with more people. Invite friends and family to Hollerback!</string>
    <string name="alright">Alright!</string>

    <!-- Convo History II -->
    <string name="no_member_info">Members: ...?</string>
    <string name="member_count">%1$s Members</string>

</resources>