<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <com.moziy.hollerback.view.preference.CustomPreferenceCategory android:title="@string/preference_category_friends" >
        <com.moziy.hollerback.view.preference.CustomPreference
            android:key="preference_friends"
            android:title="@string/preference_friends" />
    </com.moziy.hollerback.view.preference.CustomPreferenceCategory>
    <com.moziy.hollerback.view.preference.CustomPreferenceCategory android:title="@string/preference_category_account" >
        <com.moziy.hollerback.view.preference.CustomPreference
            android:enabled="true"
            android:key="preference_username"
            android:title="@string/preference_username" />
        <com.moziy.hollerback.view.preference.CustomPreference
            android:enabled="true"
            android:key="preference_phone"
            android:title="@string/preference_phone" />
    </com.moziy.hollerback.view.preference.CustomPreferenceCategory>

    <!-- <CustomPreferenceCategory -->
    <!-- android:title="@string/preference_category_library"> -->
    <!-- <SwitchPreference -->
    <!-- android:key="preference_save" -->
    <!-- android:title="@string/preference_save" -->
    <!-- /> -->
    <!-- </CustomPreferenceCategory> -->

    <com.moziy.hollerback.view.preference.CustomPreferenceCategory android:title="@string/preference_category_terms" >
        <com.moziy.hollerback.view.preference.CustomPreference
            android:key="preference_terms"
            android:title="@string/preference_terms" />
        <com.moziy.hollerback.view.preference.CustomPreference
            android:key="preference_privacy"
            android:title="@string/preference_privacy" />
    </com.moziy.hollerback.view.preference.CustomPreferenceCategory>
    <com.moziy.hollerback.view.preference.CustomPreferenceCategory android:title="@string/preference_category_team" >
        <com.moziy.hollerback.view.preference.CustomPreference
            android:key="preference_feedback"
            android:title="@string/preference_feedback" />
        <com.moziy.hollerback.view.preference.CustomPreference
            android:key="preference_twitter"
            android:title="@string/preference_twitter" />
        <com.moziy.hollerback.view.preference.CustomPreference
            android:key="preference_facebook"
            android:title="@string/preference_facebook" />
    </com.moziy.hollerback.view.preference.CustomPreferenceCategory>

    <com.moziy.hollerback.view.preference.CustomPreference
        android:key="preference_logout"
        android:title="@string/preference_logout" />

</PreferenceScreen>