<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_person"
        android:icon="@drawable/icon_person"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:title="@string/action_person">
        <menu>
            <item
                android:id="@+id/action_find_friends"
                android:icon="@drawable/icon_group"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/action_invite_friends"/>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/icon_settings"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/action_settings"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/add_convo_btn"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_add"/>
    <!-- <item -->
    <!-- android:id="@+id/mi_search" -->
    <!-- android:actionViewClass="android.widget.SearchView" -->
    <!-- android:icon="@drawable/ic_action_search" -->
    <!-- android:showAsAction="collapseActionView|ifRoom" -->
    <!-- android:title="@string/action_search"> -->
    <!-- </item> -->

</menu>