<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@android:color/white"
    >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:orientation="vertical" 
		android:gravity="center_horizontal"
	    >
	
	    <TextView
	        android:id="@+id/txtMsgSent"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:layout_marginTop="15dp"
	        android:text="@string/message_sent"
	        android:textColor="@color/background_welcome"
	        android:textStyle="bold"
	        android:textSize="@dimen/large_size"
	        android:shadowColor="@android:color/black"
	        android:shadowDx="3"
	        android:shadowDy="3"
	        android:shadowRadius="3" 
	        android:gravity="center_horizontal"
	        />    
	        
	    <com.moziy.hollerback.util.GifView
	        android:id="@+id/gifPenutButter"
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
		/>
	        
	
	    <Button
	        android:id="@+id/btnRecord"
	        android:layout_width="@dimen/button_width"
	        android:layout_height="wrap_content"
	        android:layout_margin="@dimen/activity_horizontal_margin"
	        android:text="@string/send_another" 
	        />
	
		<Button
	        android:id="@+id/btnConversations"
			android:layout_width="@dimen/button_width"
	        android:layout_height="wrap_content"
			android:layout_margin="@dimen/activity_horizontal_margin"
	        android:text="@string/conversation_list" 
		/>
	 
	</LinearLayout>
</ScrollView>