<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_welcome" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_header_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/verify_phone_display"
            android:textColor="#fff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header_account"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:textColor="#fff"
            android:textSize="@dimen/large_size"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl_phone_number_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_phone"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#adadad"
            android:padding="1dp" >

            <EditText
                android:id="@+id/txtfield_verify"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_phone_number_code_height"
                android:background="#fff"
                android:hint="@string/verify_pin"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="17sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_phone_number_container"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/action_verify" />

        <TextView
            android:id="@+id/tv_signup_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/btnSubmit"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/verify_text"
            android:textColor="#fff" />
    </RelativeLayout>

</ScrollView>